# repro-benchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml
paper/: paper.bib  paper.md
src/repro_benchmark/: cli.py  core.py  data.py  plotting.py  reporting.py  utils.py
tests/: test_smoke.py
