[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repro-benchmark"
version = "0.1.0"
description = "Reproducible, one-command benchmarking for small ML baselines."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Ivan Kirilin", email = "iovkirilin@gmail.com" },
]
keywords = ["benchmark", "reproducibility", "machine-learning", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
]

dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tabulate>=0.9",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/YOUR-ORG/repro-benchmark"
Repository = "https://github.com/YOUR-ORG/repro-benchmark"
Issues = "https://github.com/YOUR-ORG/repro-benchmark/issues"

[project.scripts]
repro-benchmark = "repro_benchmark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repro_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
